--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -2,33 +2,29 @@
   <div class="col-md-6">
     <h3>Day 1: Mon Nov 25th</h3>
     <h4>
-    Lesson <a href="https://carpentries-incubator.github.io/python-novice-programming-gapminder/" target="_blank" rel="noopener noreferrer"> Programming with Python. Part 1</a>
+    Lesson <a href="https://swcarpentry.github.io/python-novice-gapminder/index.html" target="_blank" rel="noopener noreferrer"> Programming with Python. Part 1</a>
     </h4>
 <table class="table table-striped">
-      <tr> <td>09:30</td>  <td> <a href="http://swcarpentry.github.io/python-novice-gapminder/index.html#setup" target="_blank" rel="noopener noreferrer">Setup</a> </td> </tr>
-      <tr> <td>        </td>  <td> <a href="https://carpentries-incubator.github.io/python-novice-programming-gapminder/01-intro/index.html"  target="_blank">Python Fundamentals</a></td> </tr>
-      <tr> <td>        </td>  <td> <a href="https://carpentries-incubator.github.io/python-novice-programming-gapminder/02-pandas/index.html"  target="_blank">Variables</a></td> </tr>
-     <tr> <td>        </td>  <td> <a href="https://carpentries-incubator.github.io/python-novice-programming-gapminder/03-matplotlib/index.html"  target="_blank">Data Types</a></td> </tr>
-      <tr> <td>        </td>  <td> <a href="https://carpentries-incubator.github.io/python-novice-programming-gapminder/04-lists/index.html"  target="_blank">Storing Multiple Values in Lists</a></td> </tr>
-      <tr> <td>        </td>  <td> <a href="https://carpentries-incubator.github.io/python-novice-programming-gapminder/05-loop/index.html"  target="_blank">Repeating Actions with Loops</a> </td> </tr>
-    <tr> <td>        </td>  <td> <a href="https://carpentries-incubator.github.io/python-novice-programming-gapminder/07-cond/index.html"  target="_blank">Conditionals</a></td> </tr> 
-      <tr> <td>14:30</td>  <td>END</td> </tr>
+      <tr> <td>09:30</td>  <td> <a href="https://github.com/jupyterlab/jupyterlab-desktop?tab=readme-ov-file#installation" target="_blank" rel="noopener noreferrer">Setup</a> </td> </tr>
+      <tr> <td>        </td>  <td> <a href="http://swcarpentry.github.io/python-novice-gapminder/01-run-quit.html"  target="_blank">Introduction</a></td> </tr>
+      <tr> <td>        </td>  <td> <a href="http://swcarpentry.github.io/python-novice-gapminder/02-variables.html"  target="_blank">Variables</a></td> </tr>
+     <tr> <td>        </td>  <td> <a href="http://swcarpentry.github.io/python-novice-gapminder/03-types-conversion.html"  target="_blank">Data Types</a></td> </tr>
+      <tr> <td>        </td>  <td> <a href="http://swcarpentry.github.io/python-novice-gapminder/11-lists.html"  target="_blank">Lists</a></td> </tr>
+      <tr> <td>        </td>  <td> <a href="http://swcarpentry.github.io/python-novice-gapminder/12-for-loops.html"  target="_blank">Loops</a> </td> </tr>
+    <tr> <td>        </td>  <td> <a href="http://swcarpentry.github.io/python-novice-gapminder/13-conditionals.html"  target="_blank">Conditionals</a></td> </tr> 
+      <tr> <td>14:00</td>  <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2: Tue Nov 26th</h3>
     <h4>
-        Lesson <a href="https://carpentries-incubator.github.io/python-novice-programming-gapminder/" target="_blank" rel="noopener noreferrer"> Programming with Python. Part 2</a>
+        Lesson <a href="https://swcarpentry.github.io/python-novice-gapminder/index.html/" target="_blank" rel="noopener noreferrer"> Programming with Python. Part 2</a>
     </h4>
     <table class="table table-striped">
-    <tr> <td>09:30</td>  <td> <a href="http://swcarpentry.github.io/python-novice-gapminder/index.html#setup" target="_blank" rel="noopener noreferrer">Setup</a> </td> </tr>
-      <tr> <td>        </td>  <td> <a href="https://carpentries-incubator.github.io/python-novice-programming-gapminder/"  target="_blank">Librariess</a></td> </tr>
-      <tr> <td>        </td>  <td> <a href="https://carpentries-incubator.github.io/python-novice-programming-gapminder/02-pandas/index.html"  target="_blank">Variables</a></td> </tr>
-     <tr> <td>        </td>  <td> <a href="https://carpentries-incubator.github.io/python-novice-programming-gapminder/03-matplotlib/index.html"  target="_blank">Plotting</a></td> </tr>
-      <tr> <td>        </td>  <td> <a href="https://carpentries-incubator.github.io/python-novice-programming-gapminder/08-func/index.html"  target="_blank">Writing Functions</a></td> </tr>
-      <tr> <td>        </td>  <td> <a href="https://carpentries-incubator.github.io/python-novice-programming-gapminder/09-errors/index.html"  target="_blank">Variable Scope</a> </td> </tr>
-    <tr> <td>        </td>  <td> <a href="https://carpentries-incubator.github.io/python-novice-programming-gapminder/10-defensive/index.html"  target="_blank">Programming Style</a></td> </tr> 
-      <tr> <td>14:30</td>  <td>END</td> </tr>
+    <tr> <td>09:30</td>  <td> <a href="https://swcarpentry.github.io/python-novice-gapminder/index.html" target="_blank" rel="noopener noreferrer">Recap</a> </td> </tr>
+      <tr> <td>        </td>  <td> <a href="http://swcarpentry.github.io/python-novice-gapminder/07-reading-tabular.html"  target="_blank">Reading Data</a></td> </tr>
+      <tr> <td>        </td>  <td> <a href="http://swcarpentry.github.io/python-novice-gapminder/08-data-frames.html"  target="_blank">Data Frames</a></td> </tr>
+      <tr> <td>14:00</td>  <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
