--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -30,7 +30,7 @@
   <div class="col-md-6">
     <h3>Day 3: Wed Nov 27th</h3>
     <h4>
-       Lesson <a href="https://swcarpentry.github.io/shell-novice/" target="_blank" rel="noopener noreferrer"> The Unix Shell</a>
+       Lesson <a href="https://caltechlibrary.github.io/git-desktop/" target="_blank" rel="noopener noreferrer"> GitHub Desktop App</a>
     </h4>
     <table class="table table-striped">
       <tr> <td>09:30</td>  <td> <a href="https://swcarpentry.github.io/shell-novice/01-intro.html" target="_blank" rel="noopener noreferrer">Introducing Shell</a> </td> </tr> 
