--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -33,15 +33,12 @@
        Lesson <a href="https://caltechlibrary.github.io/git-desktop/" target="_blank" rel="noopener noreferrer"> GitHub Desktop App</a>
     </h4>
     <table class="table table-striped">
-      <tr> <td>09:30</td>  <td> <a href="https://swcarpentry.github.io/shell-novice/01-intro.html" target="_blank" rel="noopener noreferrer">Introducing Shell</a> </td> </tr> 
-      <tr> <td>     </td>  <td> <a href="https://swcarpentry.github.io/shell-novice/02-filedir.html" target="_blank" rel="noopener noreferrer">Navigating Files and Directories</a> </td> </tr>                       
-      <tr> <td>10:30</td>  <td>Morning break, 15 minutes </td> </tr>
-      <tr> <td>10:45</td>  <td> <a href="https://swcarpentry.github.io/shell-novice/03-create.html" target="_blank" rel="noopener noreferrer">Working With Files and Directories</a> </td> </tr>
-      <tr> <td>11:35</td>  <td>Morning break, 10 minutes </td> </tr>
-      <tr> <td>11:45</td>  <td>  <a href="https://swcarpentry.github.io/shell-novice/04-pipefilter.html" target="_blank" rel="noopener noreferrer">Pipes and Filters</a> </td> </tr>
-      <tr> <td>12:20</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td> <a href="https://swcarpentry.github.io/git-novice/" target="_new" rel="noopener noreferrer">Version control with Git (Episodes 1-4)</a> </td> </tr>
-      <tr> <td>14:30</td>  <td>END</td> </tr>
+      <tr> <td>09:30</td>  <td> <a href="https://caltechlibrary.github.io/git-desktop/01-basics/" target="_blank" rel="noopener noreferrer">Introduction</a> </td> </tr> 
+      <tr> <td>     </td>  <td> <a href="https://caltechlibrary.github.io/git-desktop/03-create/" target="_blank" rel="noopener noreferrer">Crating a Repository</a> </td> </tr>                       
+      <tr> <td>10:45</td>  <td> <a href="https://caltechlibrary.github.io/git-desktop/04-changes/" target="_blank" rel="noopener noreferrer"></a>Tracking Changes </td> </tr>
+      <tr> <td>11:45</td>  <td>  <a href="https://caltechlibrary.github.io/git-desktop/07-collab/" target="_blank" rel="noopener noreferrer"></a>Collaboration </td> </tr>
+      <tr> <td>13:00</td>  <td> <a href="https://caltechlibrary.github.io/git-desktop/08-conflict/" target="_blank" rel="noopener noreferrer"></a> Conflicts </td> </tr>
+      <tr> <td>14:00</td>  <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
@@ -61,7 +58,7 @@
                                 <a href="https://swcarpentry.github.io/git-novice/10-open.html" target="_blank" rel="noopener noreferrer">Open Science</a> </td> </tr>
       <tr> <td>     </td>  <td> Wrap-up </td> </tr>
       <tr> <td>14:15</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
-      <tr> <td>14:30</td>  <td>END</td> </tr>
+      <tr> <td>14:00</td>  <td>END</td> </tr>
     </table>
   </div>
 </div>
