--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -44,20 +44,14 @@
   <div class="col-md-6">
     <h3>Day 4: Thu Nov 28th</h3>
     <h4>
-    Lesson <a href="https://swcarpentry.github.io/git-novice/" target="_blank" rel="noopener noreferrer"> Version Control with Git</a>
+    Lesson <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer"> Software Best Practices</a>
     </h4>
-    <table class="table table-striped">
-      <tr> <td>09:30</td>  <td> <a href="https://swcarpentry.github.io/git-novice/05-history.html" target="_blank" rel="noopener noreferrer">Exploring Changes</a> </td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>10:45</td>  <td> <a href="https://swcarpentry.github.io/git-novice/06-ignore.html" target="_blank" rel="noopener noreferrer">Ignoring Things</a>, 
-                                <a href="https://swcarpentry.github.io/git-novice/07-github.html" target="_blank" rel="noopener noreferrer">Remotes in GitHub</a> and
-                                Exercise </td> </tr>
-      <tr> <td>11:45</td>  <td>Lunch break</td> </tr>
-      <tr> <td>12:30</td>  <td> <a href="https://swcarpentry.github.io/git-novice/08-collab.html" target="_blank" rel="noopener noreferrer">Collaborating</a>, 
-                                <a href="https://swcarpentry.github.io/git-novice/09-conflict.html" target="_blank" rel="noopener noreferrer">Conflicts</a> and
-                                <a href="https://swcarpentry.github.io/git-novice/10-open.html" target="_blank" rel="noopener noreferrer">Open Science</a> </td> </tr>
-      <tr> <td>     </td>  <td> Wrap-up </td> </tr>
-      <tr> <td>14:15</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
+        <table class="table table-striped">
+      <tr> <td>09:30</td>  <td> <a href="https://coderefinery.github.io/git-collaborative/same-repository/" target="_blank" rel="noopener noreferrer"></a>Collaborating within the same repository</td> </tr> 
+      <tr> <td>     </td>  <td> <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer"></a>FAIR Software Checklist</td> </tr>                       
+      <tr> <td>10:45</td>  <td> <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer">Licenses</a></td> </tr>
+      <tr> <td>11:45</td>  <td>  <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer">Software Documentation</a></td> </tr>
+      <tr> <td>13:00</td>  <td> <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer"></a>Software Registration </td> </tr>
       <tr> <td>14:00</td>  <td>END</td> </tr>
     </table>
   </div>
