--- a/_includes/install_instructions/python.html
+++ b/_includes/install_instructions/python.html
@@ -29,7 +29,7 @@ https://jupyter-notebook.readthedocs.io/en/stable/notebook.html#browser-compatib
   if you do not plan to use Jupyter Notebook environment.
   {% endcomment %}
   <p>
-    We will teach Python using the <a href="https://jupyter.org/">Jupyter Notebook</a>,
+    We will teach Python using the <a href="https://jupyter.org/">Jupyter Desktop</a>,
     a programming environment that runs in a web browser (Jupyter Notebook will be installed by Anaconda). For this to work you will need a reasonably
     up-to-date browser. The current versions of the Chrome, Safari and
     Firefox browsers are all
