--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -24,11 +24,11 @@
     <tr> <td>09:30</td>  <td> <a href="https://swcarpentry.github.io/python-novice-gapminder/index.html" target="_blank" rel="noopener noreferrer">Recap</a> </td> </tr>
       <tr> <td>        </td>  <td> <a href="http://swcarpentry.github.io/python-novice-gapminder/07-reading-tabular.html"  target="_blank">Reading Data</a></td> </tr>
       <tr> <td>        </td>  <td> <a href="http://swcarpentry.github.io/python-novice-gapminder/08-data-frames.html"  target="_blank">Data Frames</a></td> </tr>
-      <tr> <td>        </td>  <td> </td> </tr>
-      <tr> <td>        </td>  <td> </td> </tr>
-      <tr> <td>        </td>  <td> </td> </tr>
-      <tr> <td>        </td>  <td> </td> </tr>
-      <tr> <td>14:00</td>  <td>END</td> </tr>
+      <tr> <td>        </td>  <td> </td> / </tr>
+      <tr> <td>        </td>  <td> </td> / </tr>
+      <tr> <td>        </td>  <td> </td> / </tr>
+      <tr> <td>        </td>  <td> </td> / </tr>
+      <tr> <td>14:00</td>  <td>END</td> / </tr>
     </table>
   </div>
   <div class="col-md-6">
@@ -52,10 +52,10 @@
     </h4>
         <table class="table table-striped">
       <tr> <td>09:30</td>  <td> <a href="https://coderefinery.github.io/git-collaborative/same-repository/" target="_blank" rel="noopener noreferrer"></a>Collaborating within the same repository</td> </tr> 
-      <tr> <td>     </td>  <td> <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer"></a>FAIR Software Checklist</td> </tr>                       
+      <tr> <td>     </td>  <td> <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer">FAIR Software Checklist</td> </tr>                       
       <tr> <td>10:45</td>  <td> <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer">Licenses</a></td> </tr>
       <tr> <td>11:45</td>  <td>  <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer">Software Documentation</a></td> </tr>
-      <tr> <td>13:00</td>  <td> <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer"></a>Software Registration </td> </tr>
+      <tr> <td>13:00</td>  <td> <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer">Software Registration </td> </tr>
       <tr> <td>14:00</td>  <td>END</td> </tr>
     </table>
   </div>
