--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -24,11 +24,11 @@
     <tr> <td>09:30</td>  <td> <a href="https://swcarpentry.github.io/python-novice-gapminder/index.html" target="_blank" rel="noopener noreferrer">Recap</a> </td> </tr>
       <tr> <td>        </td>  <td> <a href="http://swcarpentry.github.io/python-novice-gapminder/07-reading-tabular.html"  target="_blank">Reading Data</a></td> </tr>
       <tr> <td>        </td>  <td> <a href="http://swcarpentry.github.io/python-novice-gapminder/08-data-frames.html"  target="_blank">Data Frames</a></td> </tr>
-      <tr> <td>        </td>  <td> </td> / </tr>
-      <tr> <td>        </td>  <td> </td> / </tr>
-      <tr> <td>        </td>  <td> </td> / </tr>
-      <tr> <td>        </td>  <td> </td> / </tr>
-      <tr> <td>14:00</td>  <td>END</td> / </tr>
+      <tr> <td>        </td>  <td> / </td>  </tr>
+      <tr> <td>        </td>  <td> / </td>  </tr>
+      <tr> <td>        </td>  <td> / </td>  </tr>
+      <tr> <td>        </td>  <td> / </td>  </tr>
+      <tr> <td>14:00</td>  <td>END</td>  </tr>
     </table>
   </div>
   <div class="col-md-6">
