--- a/_includes/install_instructions/python.html
+++ b/_includes/install_instructions/python.html
@@ -27,9 +27,9 @@ https://jupyter-notebook.readthedocs.io/en/stable/notebook.html#browser-compatib
   Please remove or comment out this paragraph using
   <!-- and --> or  {% comment %} and {% endcomment %}
   if you do not plan to use Jupyter Notebook environment.
-
+  {% endcomment %}
   <p>
-    We will teach Python using the <a href="https://jupyter.org/">Jupyter Desktop</a>,
+    We will teach Python using the <a href="https://jupyter.org/">Jupyter Notebook</a>,
     a programming environment that runs in a web browser (Jupyter Notebook will be installed by Anaconda). For this to work you will need a reasonably
     up-to-date browser. The current versions of the Chrome, Safari and
     Firefox browsers are all
@@ -111,4 +111,3 @@ https://jupyter-notebook.readthedocs.io/en/stable/notebook.html#browser-compatib
     </div>
   </div>
 </div>
-
