--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -48,15 +48,16 @@
   <div class="col-md-6">
     <h3>Day 4: Thu Nov 28th</h3>
     <h4>
-    Lesson <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer"> Software Best Practices</a>
+      Lesson <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer"> Software Best Practices</a>
     </h4>
-        <table class="table table-striped">
-      <tr> <td>09:30</td>  <td> <a href="https://coderefinery.github.io/git-collaborative/same-repository/" target="_blank" rel="noopener noreferrer"></a>Collaborating within the same repository</td> </tr> 
-      <tr> <td>     </td>  <td> <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer">FAIR Software Checklist</td> </tr>                       
-      <tr> <td>10:45</td>  <td> <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer">Licenses</a></td> </tr>
-      <tr> <td>11:45</td>  <td>  <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer">Software Documentation</a></td> </tr>
-      <tr> <td>13:00</td>  <td> <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer">Software Registration </td> </tr>
+    <table class="table table-striped">
+      <tr> <td>09:30</td>  <td> <a href="https://coderefinery.github.io/git-collaborative/same-repository/" target="_blank" rel="noopener noreferrer">Collaboration</a> </td> </tr> 
+      <tr> <td>     </td>  <td> <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer">FAIR Software Checklist</a> </td> </tr>                       
+      <tr> <td>10:45</td>  <td> <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer"></a>Licenses</td> </tr>
+      <tr> <td>11:45</td>  <td>  <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer"></a>Software Documentation </td> </tr>
+      <tr> <td>13:00</td>  <td> <a href="https://ubvu.github.io/codechecklist/" target="_blank" rel="noopener noreferrer"></a> Software Registration </td> </tr>
       <tr> <td>14:00</td>  <td>END</td> </tr>
     </table>
   </div>
+
  </div>
